--- a/blog-frontend/src/App.css
+++ b/blog-frontend/src/App.css
@@ -1,38 +1,307 @@
-.App {
-  text-align: center;
+/*Global Styles*/
+
+body {
+  margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+#root {
+  display: grid;
+  grid-template-columns: 60px 1fr 1fr 1fr 60px;
+  grid-template-rows: auto 1fr auto;
+  margin: 0;
   min-height: 100vh;
+}
+
+h2 {
+  font-family: 'Catamaran'; 
+  font-size: 38px;
+  font-style: normal; 
+  font-variant: normal; 
+  font-weight: 800;
+}
+
+h3 {
+  font-family: 'Catamaran'; 
+  font-size: 24px;
+  font-style: normal; 
+  font-variant: normal; 
+  font-weight: 500;
+}
+
+p {
+  font-family: 'Hind Guntur'; 
+  font-size: 14px;
+  font-style: normal; 
+  font-variant: normal; 
+  font-weight: 500;
+}
+
+input {
+  width: 500px;
+  background-color: #f9f9f9;
+  border: 0px;
+  border-bottom: 4px solid;
+  border-image: linear-gradient(to right, #ffc8dd, #ffafcc, #a2d2ff, #ffc8dd);
+  border-image-slice: 1;
+  margin-bottom: 20px;
+  padding: 5px;
+}
+
+label {
+  font-family: 'Hind Guntur'; 
+  font-size: 14px;
+  font-style: normal; 
+  font-variant: normal; 
+  font-weight: 500;
+}
+
+#new-post-content {
+  height: 150px;
+}
+
+.button {
+  position: relative;
+  margin: 10px 0px;
+  padding: 8px 25px;
+  font-family: 'Catamaran'; 
+  font-size: 14px;
+  font-style: normal; 
+  font-variant: normal; 
+  font-weight: 500;
+  letter-spacing: 2px;
+  color: #2e2e2e;
+  border-radius: 3px;
+  border: none;
+  background-color: #cdb4db;
+  text-transform: uppercase;
+  text-decoration: none;
+  overflow:hidden;
+  z-index: 1;
+  cursor: pointer;
+  transition:         .4s ease-in;
+  -o-transition:      .4s ease-in;
+  -ms-transition:     .4s ease-in;
+  -moz-transition:    .4s ease-in;
+  -webkit-transition: .4s ease-in;
+}
+
+.button:hover {
+  color: #2e2e2e;
+  padding: 12px 29px;
+  transition: .5s;
+}
+
+.button:before {
+  content: "";
+  position: absolute;
+  background: #a2d2ff;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: 100%;
+  z-index: -1;
+  transition: top 1s ease-in;
+  -webkit-transition: top .4s ease-in;
+}
+
+.button:hover:before {
+  top: 0;
+}
+
+.post-card-container {
+  align-content: flex-start;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
+  flex-direction: row;
 }
 
-.App-link {
-  color: #61dafb;
+.post-card {
+  background-color: #f9f9f9;
+  padding: 10px;
+  margin: 20px 20px;
+  width: 400px;
+  border-left: 5px solid;
+  border-image: linear-gradient(to bottom,  #ffc8dd, #ffafcc, #a2d2ff, #ffc8dd) 1 100%;
+  transition: .5s;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.post-card:hover {
+  padding: 14px;
+  transition: .5s;
+  box-shadow: 5px 10px 18px #b9b9b9;
+}
+
+.post-card a {
+  color: #2e2e2e;
+  text-decoration: none;
+}
+
+.post-card a .username, .date{
+  color: #c7c7c7;
+  margin: 0px;
+}
+
+/*Header Styles*/
+
+header {
+  background-color: #A2D2FF;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  grid-column: 1/6;
+  grid-row: 1/2;
+}
+
+header h1 {
+  align-self: center;
+  display: inline-block;
+  grid-column: 1/2;
+  grid-row: 1;
+  padding-left: 40px;
+  margin: 0;
+}
+
+header h1 a {
+  color: #2e2e2e;
+  font-family: Paytone One; 
+  font-size: 46px; 
+  font-style: normal; 
+  font-variant: normal; 
+  font-weight: 700;
+  text-decoration: none;
+}
+
+header nav {
+  align-self: center;
+  display: inline-block;
+  grid-column: 2/4;
+  grid-row: 1;
+  padding-right: 40px;
+  margin: 0;
+}
+
+header nav ul {
+  text-align: right;
+}
+
+header nav ul li {
+  display: inline;
+}
+
+header nav ul li a {
+  color: #2e2e2e;
+  cursor: pointer;
+  text-decoration: none;
+  font-family: 'Catamaran'; 
+  font-size: 24px;
+  font-style: normal; 
+  font-variant: normal; 
+  font-weight: 400;
+  position: relative;
+  padding: 0px 10px;
+}
+
+header nav ul li a::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #2e2e2e;
+  visibility: hidden;
+  transform: scaleX(0);
+  transition: all 0.3s ease-in-out 0s;
+}
+
+header nav ul li a:hover {
+  color: #2e2e2e;
+}
+
+header nav ul li a:hover::before {
+  visibility: visible;
+  transform: scaleX(1);
+}
+
+.gradient-line {
+  align-self: end;
+  background: linear-gradient(0.25turn, #ffc8dd, #ffafcc, #a2d2ff, #ffc8dd);
+  height: 5px;
+  grid-column: 1/6;
+  grid-row: 2/3;
+}
+
+/*Main Styles*/
+
+main {
+  grid-column: 2/5;
+  grid-row: 2/3;
+}
+
+/*Footer Styles*/
+
+footer {
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: auto auto;
+  grid-column: 1/6;
+  grid-row: 3/4;
+  background-color: #A2D2FF;
+}
+
+footer nav {
+  align-self: center;
+  display: inline-block;
+  grid-column: 1;
+  grid-row: 1/2;
+  margin: 0;
+}
+
+footer nav ul {
+  text-align: center;
+  padding: 0;
+}
+
+footer nav ul li {
+  display: inline;
+}
+
+footer nav ul li a {
+  color: #2e2e2e;
+  text-decoration: none;
+  font-family: 'Catamaran'; 
+  font-size: 24px;
+  font-style: normal; 
+  font-variant: normal; 
+  font-weight: 400;
+  position: relative;
+  padding: 0px 10px;
+}
+
+footer nav ul li a::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #2e2e2e;
+  visibility: hidden;
+  transform: scaleX(0);
+  transition: all 0.3s ease-in-out 0s;
+}
+
+footer nav ul li a:hover {
+  color: #2e2e2e;
+}
+
+footer nav ul li a:hover::before {
+  visibility: visible;
+  transform: scaleX(1);
+}
+
+footer p {
+  grid-column: 1;
+  grid-row: 2/3;
+  text-align: center;
 }
