--- a/blog-frontend/src/App.css
+++ b/blog-frontend/src/App.css
@@ -1,4 +1,5 @@
 /*Global Styles*/
+@import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@100&family=Hind+Guntur:wght@300&display=swap');
 
 body {
   margin: 0;
@@ -36,8 +37,13 @@ p {
   font-weight: 500;
 }
 
+form {
+  margin: auto;
+  width: 400px;
+}
+
 input {
-  width: 500px;
+  width: 400px;
   background-color: #f9f9f9;
   border: 0px;
   border-bottom: 4px solid;
@@ -109,17 +115,18 @@ label {
 }
 
 .post-card-container {
-  align-content: flex-start;
+  /* align-content: flex-start; */
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
+  justify-content: space-evenly;
 }
 
 .post-card {
   background-color: #f9f9f9;
   padding: 10px;
   margin: 20px 20px;
-  width: 400px;
+  max-width: 450px;
   border-left: 5px solid;
   border-image: linear-gradient(to bottom,  #ffc8dd, #ffafcc, #a2d2ff, #ffc8dd) 1 100%;
   transition: .5s;
@@ -236,6 +243,11 @@ header nav ul li a:hover::before {
 main {
   grid-column: 2/5;
   grid-row: 2/3;
+  margin-bottom: 2rem;
+}
+
+main h2 {
+  text-align: center;
 }
 
 /*Footer Styles*/
